header spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,9 @@ section{
   width:70%;
   margin:auto;
 }
+.containr-fluid{
 
+}
 ul{
   list-style: none;
 }
